Fix overlap issues with typeahead, advanced search, and map controls

--- a/opentreemap/treemap/css/sass/partials/_subheader.scss
+++ b/opentreemap/treemap/css/sass/partials/_subheader.scss
@@ -2,7 +2,7 @@
 
 .subhead {
     position: relative;
-    z-index: 1;
+    z-index: 10;
     border-top: 1px solid lighten($primary-color, 35%);
     pointer-events: none;
 
